--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -16,10 +16,27 @@
         <div class="col-lg-6 col-md-4 col-sm-12 ">
           <img src="img/disco.png">
         </div>
-      
+        <div class="col-lg-4 col-md-4 col-sm-12 col-lg-offset-2 col-md-2">
+          <a href="#"><img class="img-rounded img-social" src="img/face.png"></img></a>
+          <a href="#"><img class="img-rounded img-social" src="img/inst.png"></img></a>
+          <a href="#"><img class="img-rounded img-social" src="img/twiter.png"></img></a>
+          <a href="#"><img class="img-rounded img-social" src="img/google.png"></img></a>
+          <a href="#"><img class="img-rounded img-social" src="img/youtube.png"></img></a>
+        </div>
       </div>
     </header>
-
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <ul class="nav nav-pills nav-justified">
+            <li class="active"><a href="#">Inicio</a></li>
+            <li><a href="#">Artistas</a></li>
+            <li><a href="#">Grupos</a></li>
+            <li><a href="#">Top 10</a></li>
+            <li><a href="#">Letras</a></li>
+            <li><a href="#">Acordes</a></li>
+          </ul>
+        </div>
+    </nav>
     <div class="row">
       <div class="col-lg-8 col-md-8 col-sm-12">
         <article>
@@ -65,7 +82,16 @@
             <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
             <input type="text" class="form-control" placeholder="Buscar por...">
           </div>
-
+          <div class="card">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Genero</li>
+              <li class="list-group-item">Nombre</li>
+              <li class="list-group-item">Artista</li>
+              <li class="list-group-item">Album</li>
+              <li class="list-group-item">Fecha de lanzamiento</li>
+              <li class="list-group-item">Top 100</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
