--- a/Foundation/index.html
+++ b/Foundation/index.html
@@ -42,7 +42,31 @@
         <li><a href="#">Comida sana</a></li>
       </ul>
     </div>
-    
+      <div class="large-8 medium-4 small-12 columns" id="color-fondo">
+        <h1>Ñoquis de Papa</h1>
+        <img src="img/noquis.jpg" alt="">
+        <p>Hay muchas recetas de ñoquis, elegimos ésta porque a nuestro criterio consideramos que es la masa más típica de los ñoquis de papas, lo que no quita que se le puedan hacer modificaciones. Eso queda a gusto de cada uno. La cantidad de harina es, por cada kilo de papas 300 gramos de harina aproximadamente. La variación en la harina debe ser muy poca para que los ñoquis queden con consistencia pero tiernos, que es la diferencia tan notoria con los ñoquis que no son caseros.
+        Un gran detalle a tener en cuenta es la forma de cocinar la papa, detalle que especificamos a continuación en la receta.
+      </p>
+      <label for="">
+        <textarea name="texto" rows="2" cols="10">Comentario</textarea>
+      </label>
+
+      <div class="large-12 medium-4 small-12 columns">
+        <h1>Pollo a la pizza</h1>
+        <img src="img/polloalapizza.jpg" alt="">
+        <p>Se pone al horno, previamente calentado, las seis entrepiernas
+aderezadas con sal un poco de aceite, pimienta y ajos molidos, se les
+deja hasta que estén cocidas y hayan botado toda su grasa, luego se
+sacan y enfrían, encima se les coloca el queso mozarrella, una rodaja
+de jamón, una aceituna verde y se le decora con un trozo de pimentón y
+se lleva nuevamente al horno hasta que el queso se haya derretido, se
+saca y se le echa un poco de orégano, y listo para saborear esta rica comida! </p>
+    <label for="">
+      <textarea name="texto" rows="2" cols="10">Comentario</textarea>
+    </label>
+      </div>
+      </div>
     </div>
 
 
